# CLIProxyAPI

./: config.example.yaml
.github/workflows/: docker-image.yml
rs-proxy/: Cargo.toml  thinking-injection-paths-minimal.md  thinking-injection-paths.md
rs-proxy/.claude/: settings.local.json
rs-proxy/openspec/: project.md
rs-proxy/openspec/changes/add-rs-proxy/: design.md  proposal.md  tasks.md
rs-proxy/openspec/changes/add-rs-proxy/specs/cli/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/error-handling/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/model-registry/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/models-enhancer/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/protocol-anthropic/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/protocol-common/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/protocol-detection/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/protocol-gemini/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/protocol-openai/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/proxy-core/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/proxy-headers/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/proxy-streaming/: spec.md
rs-proxy/openspec/changes/add-rs-proxy/specs/routing/: spec.md
rs-proxy/src/: config.rs  error.rs  main.rs
rs-proxy/src/models/: mod.rs  registry.rs
rs-proxy/src/protocol/: anthropic.rs  gemini.rs  mod.rs  openai.rs
rs-proxy/src/proxy/: client.rs  mod.rs
rs-proxy/src/thinking/: injector.rs  mod.rs  models.rs  parser.rs
(+18 files in other folders)
